X11: Fix mixup between DIP/pixel coordinates

BUG=707721
R=sky

Change-Id: Ibbbff9c2c815700324f553a3b66e878f76938534
Reviewed-on: https://chromium-review.googlesource.com/1083692
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564261}
Former-commit-id: 2752a03ba6435130848aa620b7ab4246eec2f77a